# opencis-core

./: .gitignore  LICENSE  Makefile  cxl-util  pyproject.toml
.github/workflows/: core-ci.yml
demos/chatrag/: hybrid_faiss_store.py  main.py  memory_backend.py  memory_vector_search.py  rag-host.py  rag_host.py
demos/chatrag/templates/chatui/: index.html
demos/image-classification/: accel-t1.py  accel-t2.py  host-t1.py  host-t2.py  run-demo.py  switch.py
docker/: Dockerfile-ci
opencis/: cpu.py
opencis/apps/: accelerator.py  cxl_simple_host.py  cxl_switch.py  fabric_manager.py  memory_pooling.py  multi_logical_device.py  multiheaded_single_logical_device.py  packet_trace_runner.py  pci_device.py  single_logical_device.py
opencis/apps/backend/: memory_backend.py
opencis/cxl/cci/: common.py
opencis/cxl/cci/generic/: events.py  logs.py
opencis/cxl/cci/memory_device/: dynamic_capacity.py  identify_memory_device.py
opencis/cxl/cci/vendor_specfic/: __init__.py  get_connected_devices.py  notify_device_update.py  notify_port_update.py  notify_switch_update.py
opencis/cxl/component/: bi_decoder.py  bind_processor.py  cache_controller.py  cache_id_decoder_capability.py  cache_route_table_manager.py  cci_executor.py  common.py  cxl_bridge_component.py  cxl_cache_dcoh.py  cxl_cache_manager.py  cxl_component.py  cxl_connection.py  cxl_host.py  cxl_host_manager.py  cxl_io_callback_data.py  cxl_io_manager.py  cxl_mem_dcoh.py  cxl_mem_manager.py  cxl_memory_device_component.py  cxl_memory_hub.py  cxl_packet_processor.py  device_llc_iogen.py  fmld.py  hdm_decoder.py  host_llc_iogen.py  host_manager.py  host_manager_conn.py  irq_manager.py  packet_reader.py  physical_port_manager.py  short_msg_conn.py  switch_connection_client.py  switch_connection_manager.py  virtual_switch_manager.py
opencis/cxl/component/fabric_manager/: socketio_server.py
opencis/cxl/component/mctp/: mctp_cci_api_client.py  mctp_cci_executor.py  mctp_connection.py  mctp_connection_client.py  mctp_connection_manager.py  mctp_packet_processor.py  mctp_packet_reader.py
opencis/cxl/component/root_complex/: cache_coherency_bridge.py  home_agent.py  io_bridge.py  memory_controller.py  root_complex.py  root_port_client_manager.py  root_port_switch.py
opencis/cxl/component/virtual_switch/: downstream_vppb.py  port_binder.py  routers.py  routing_table.py  upstream_vppb.py  virtual_switch.py  vppb.py  vppb_routing_info.py
opencis/cxl/config_space/: cfg.py  device.py  port.py
opencis/cxl/config_space/doe/: cdat.py  doe.py  doe_table_access.py
opencis/cxl/config_space/dvsec/: __init__.py  common.py  cxl_devices.py  cxl_extension_dvsec_for_ports.py  (+3 more)
opencis/cxl/device/: cxl_type1_device.py  cxl_type2_device.py  cxl_type3_device.py  downstream_port_device.py  pci_to_pci_bridge_device.py  port_device.py  root_port_device.py  upstream_port_device.py
opencis/cxl/environment/: __init__.py  environment.py
opencis/cxl/features/: event_manager.py  log_manager.py  mailbox.py
opencis/cxl/mmio/: __init__.py
opencis/cxl/transport/: cache_fifo.py  common.py  ethernet.py  memory_fifo.py  packet.py  socket_server.py  transaction.py
opencis/drivers/: cxl_bus_driver.py  cxl_mem_driver.py  pci_bus_driver.py
opencis/msim/: emulator.py
opencis/pci/component/: config_space_manager.py  doe_mailbox.py  fifo_pair.py  mmio_manager.py  packet_processor.py  pci.py  pci_connection.py  routing_table.py
opencis/pci/config_space/: __init__.py  pci.py
opencis/pci/device/: pci_device.py
opencis/util/: accessor.py  async_gatherer.py  bound_event.py  component.py  logger.py  memory.py  number.py  number_const.py  pci.py  server.py  unaligned_bit_structure.py
tests/: conftest.py  test_cxl_cache_coherency_bridge.py  test_cxl_cache_controller.py  test_cxl_complex_host.py  test_cxl_component_hdm_decoder.py  test_cxl_component_physical_port_manager.py  test_cxl_component_switch_bind.py  test_cxl_component_switch_connection_manager.py  test_cxl_component_virtual_switch.py  test_cxl_component_virtual_switch_manager.py  test_cxl_device_downstream_port.py  test_cxl_device_multi_logical_device.py  test_cxl_device_multiheaded_single_logical_device.py  test_cxl_device_single_logical_device.py  test_cxl_device_type1_device.py  test_cxl_device_type2_device.py  test_cxl_device_upstream_port.py  test_cxl_doe_table_access.py  test_cxl_host.py  test_cxl_mailbox.py  test_cxl_mem_dcoh.py  test_cxl_memory_hub.py  test_cxl_mmio.py  test_cxl_mmio_cachemem_register.py  test_cxl_mmio_component_register.py  test_cxl_mmio_device_register.py  test_dynamic_fields.py  test_pci_component_mmio_manager.py  test_pci_config_space_headers.py  test_pci_config_space_msi.py  test_pci_device_pci_device.py  test_pcie_doe.py  test_tunnel.py  test_unaligned_bit_structure.py  test_util_number.py
traces/: qemu-s8000-h40026.pcap
(+40 files in other folders)
