[tool.poetry]
name = "opencis"
version = "0.4.0"
description = "OpenCXL"
authors = ["Paul Kang", "Kyeyoon Park"]
license = "BSD-3"
readme = "README.md"
packages = [{include = "opencis"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
humanfriendly = "^10.0"
pyyaml = "^6.0.1"
python-socketio = "^5.10.0"
aiohttp = "^3.8.6"
pytest-timeout = "^2.2.0"
dill = "^0.3.7"
websockets = "^12.0"
jsonrpcserver = "^5.0.9"
jsonrpcclient = "^4.0.3"
black = "^24.4.2"
sortedcontainers = "^2.4.0"
readerwriterlock = "^1.0.9"
torch = "^2.3.1"
torchvision = "^0.18.1"
torchinfo = "^1.8.0"
tqdm = "^4.66.4"
pyshark = "^0.6"
scapy = "^2.6.1"
pytest-xdist = "3.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.1"
pylint = "3.0.1"


[tool.pdm.build]
includes = ["opencis"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
testpaths = "tests/"
timeout = 45
filterwarnings = [
  "ignore::DeprecationWarning"
]

[tool.pylint.main]
disable = [
  "logging-fstring-interpolation",
  "missing-function-docstring",
  "missing-class-docstring",
  "pointless-string-statement",
  "too-many-arguments",
  "too-many-branches",
  "broad-exception-raised",
  "broad-exception-caught",
  "redefined-builtin",
  "too-many-locals",
  "invalid-name",
  "fixme",
  "too-many-lines",
  "too-many-instance-attributes",
  "too-many-public-methods",
  "too-few-public-methods",
  "unspecified-encoding",
  "disallowed-name",
  "too-many-statements",
]
jobs = 4

[tool.black]
line-length = 100
target-version = ['py311']

[project]
authors = [
    {name = "Paul Kang"},
    {name = "Kyeyoon Park"},
]
license = {text = "BSD-3"}
requires-python = "<4.0,>=3.11"
dependencies = [
    "click<9.0.0,>=8.1.7",
    "humanfriendly<11.0,>=10.0",
    "pyyaml<7.0.0,>=6.0.1",
    "python-socketio<6.0.0,>=5.10.0",
    "aiohttp<4.0.0,>=3.8.6",
    "pytest-timeout<3.0.0,>=2.2.0",
    "dill<1.0.0,>=0.3.7",
    "websockets<13.0,>=12.0",
    "jsonrpcserver<6.0.0,>=5.0.9",
    "jsonrpcclient<5.0.0,>=4.0.3",
    "black<25.0.0,>=24.4.2",
    "sortedcontainers<3.0.0,>=2.4.0",
    "readerwriterlock<2.0.0,>=1.0.9",
    "torch<3.0.0,>=2.3.1",
    "torchvision<1.0.0,>=0.18.1",
    "torchinfo<2.0.0,>=1.8.0",
    "tqdm<5.0.0,>=4.66.4",
    "pyshark<1.0,>=0.6",
    "scapy<3.0.0,>=2.6.1",
    "pytest-xdist==3.5.0",
]
name = "opencis"
version = "0.1.0"
description = "OpenCXL"
readme = "README.md"

[dependency-groups]
dev = [
    "pytest<8.0.0,>=7.3.1",
    "pytest-cov<5.0.0,>=4.0.0",
    "pytest-asyncio<1.0.0,>=0.21.1",
    "pylint==3.0.1",
]
